+ Master redisign of the window system, not yet full working

Version: V0.1B50 Date: Fri Apr 04 22:10:24 2003 +++++++++++++++++++++++++++++++
+ Fix on the window rewrite
+ some work on the Linux port

Version: V0.1B51 Date: Sun Apr 06 21:27:35 2003 +++++++++++++++++++++++++++++++
+ Realy big patch from Werner
  - Fix a problem with the paning in MouseModel
  - Fixing workbench binding for std. menus
  - switch to QT_VER for easier changing QT Version
  - fix cmd_name bug in CmdBar
  - making command line dropabel (QT3)
  - frame for 3Dview
  - time in about dialog ;-)

Version: V0.1B52 Date: Thu Apr 10 21:17:20 2003 +++++++++++++++++++++++++++++++
+ insert the TreeDockBar

Version: V0.1B53 Date: Sun Apr 13 15:33:23 2003 +++++++++++++++++++++++++++++++
+ patch from Werner about Linux
+ rezising the tree and the Icons

Version: V0.1B54 Date: Thu Apr 17 12:19:12 2003 +++++++++++++++++++++++++++++++
+ commitin the patch from WErner
- still problems with the TreeBar

Version: V0.1B55 Date: Fri Apr 18 23:08:12 2003 +++++++++++++++++++++++++++++++
+ add macro manager

Version: V0.1B56 Date: Tue Apr 22 18:38:49 2003 +++++++++++++++++++++++++++++++
+ finish Macro recording
+ switching toggle commands
+ View preferences page
+ some bugfixing (werner)
+ QT3 fixes (werner)
+ DnD changes (werner)

Version: V0.1B57 Date: Fri Apr 25 16:18:12 2003 +++++++++++++++++++++++++++++++
+ New modules for the ToptDS and Geometry wrapping
+ Script command for macro customizing

Version: V0.1B58 Date: Thu May 01 20:40:24 2003 +++++++++++++++++++++++++++++++
+ patch from werner 
+ precompiled header (werner)

Version: V0.1B59 Date: Thu May 17 15:40:24 2003 +++++++++++++++++++++++++++++++
+ scintilla added
+ pragmas set for windows only
+ bug fixed in Buttongroug
+ add string for CustomWidget where to store

Version: V0.1B59 Date: Sun May 18 11:03:48 2003 +++++++++++++++++++++++++++++++
+ qextmdi added
+ some changes in close flow, still not finished